--- a/style.css
+++ b/style.css
@@ -1,3 +1,14 @@
-h1 {
-  color: red;
+.flex {
+    height: auto;
+    width: 600px;
+    background-color: #096eeb;
+
+}
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+hr {
+  width: 28%;
 }
