--- a/style.css
+++ b/style.css
@@ -5,13 +5,14 @@
 
 }
 .container {
-  border: 5px solid rgb(111,41,97);
-  border-radius: .5em;
+  /* border: 5px solid rgb(111,41,97);*/
+  /* border-radius: .5em; */
   padding: 10px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  
+  font-family: Arial, Helvetica, sans-serif;
+
 }
 hr {
   width: 57%;
@@ -20,6 +21,9 @@ hr {
 h1{
   font-size: 40px;
   text-align: center;
+  line-height: 70px;
+  
 }
 body {
-  background-color: rgb(189, 250, 254);
+   background: linear-gradient(160deg, #d8dcf6 10%, #f6bdff 80%);
+}
